<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">xo-speak</string>
    <string name="action_settings">Settings</string>
    <string name="textTitle">Text To Speech</string>
    <string name="language_prompt">Language</string>
    <string name="color_eyes__prompt">Color of the eyes</string>
    <string name="style_eyes__prompt">Style of the eyes</string>
    <string name="number_eyes__prompt">Number of eyes</string>
    <string name="nose_style__prompt">Nose\'s Style</string>
    <string name="mouth_style__prompt">Mouth\'s Style</string>
    <string name="default_language">Default</string>
    <string name="start">Start</string>
    <string name="setpitch">Pitch :</string>
    <string name="setspeed">Speed :</string>
    <string name="eyes_one">One</string>
    <string name="eyes_two">Two</string>
    <string name="eyes_three">Three</string>
    <string name="eyes_four">Four</string>
    <string name="eyes_five">Five</string>
    <string name="eyes_round">Round</string>
    <string name="eyes_square">Square</string>
    <string name="eyes_glasses">Glasses</string>
    <string name="eyes_black">Black</string>
    <string name="eyes_blue">Blue</string>
    <string name="eyes_green">Green</string>
    <string name="eyes_brown">Brown</string>
    <string name="eyes_gray">Gray</string>
    <string name="eyes_red">Red</string>
    <string name="nose_choice1">Choice 1</string>
    <string name="nose_choice2">Choice 2</string>
    <string name="nose_choice3">Choice 3</string>
    <string name="nose_choice4">Choice 4</string>
    <string name="nose_choice5">Choice 5</string>
    <string name="simple_mouth">Simple style</string>
    <string name="waveform">Waveform</string>
    <string name="shining_smile">Shining smile</string>

    <string-array name="number_eyes">
        <item>@string/eyes_two</item>
        <item>@string/eyes_one</item>
        <item>@string/eyes_three</item>
        <item>@string/eyes_four</item>
        <item>@string/eyes_five</item>
    </string-array>
    <string-array name="eyes_style">
        <item>@string/eyes_round</item>
        <item>@string/eyes_square</item>
        <item>@string/eyes_glasses</item>
    </string-array>
    <string-array name="color_eyes">
        <item>@string/eyes_black</item>
        <item>@string/eyes_blue</item>
        <item>@string/eyes_green</item>
        <item>@string/eyes_brown</item>
        <item>@string/eyes_gray</item>
        <item>@string/eyes_red</item>
    </string-array>
    <string-array name="nose_style">
        <item>@string/nose_choice1</item>
        <item>@string/nose_choice2</item>
        <item>@string/nose_choice3</item>
        <item>@string/nose_choice4</item>
        <item>@string/nose_choice5</item>
    </string-array>
    <string-array name="mouth_style">
        <item>@string/simple_mouth</item>
        <item>@string/waveform</item>
        <item>@string/shining_smile</item>
    </string-array>

</resources>