<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/background_dark" >

        <Spinner
            android:id="@+id/spinnerLanguage"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:prompt="@string/language_prompt" />

        <TextView
            android:id="@+id/set_pitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="130dp"
            android:text="@string/setpitch"
            android:textColor="@android:color/white" />

        <SeekBar
            android:id="@+id/pitchSlider"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="180dp"
            android:max="20"
            android:progress="5" />

        <TextView
            android:id="@+id/set_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="310dp"
            android:text="@string/setspeed"
            android:textColor="@android:color/white" />

        <SeekBar
            android:id="@+id/speedSlider"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="360dp"
            android:max="50"
            android:progress="5" />

        <Spinner
            android:id="@+id/spinnerNumberEyes"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="390dp"
            android:entries="@array/number_eyes"
            android:prompt="@string/number_eyes__prompt" />

        <Spinner
            android:id="@+id/spinnerStyleEyes"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="260dp"
            android:entries="@array/style_eyes"
            android:prompt="@string/style_eyes__prompt" />

        <Spinner
            android:id="@+id/spinnerColorEyes"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="130dp"
            android:entries="@array/color_eyes"
            android:prompt="@string/color_eyes__prompt" />

        <Spinner
            android:id="@+id/spinnerMouthStyle"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:entries="@array/mouth_style"
            android:prompt="@string/mouth_style__prompt" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/face"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="14"
        android:orientation="vertical" >

        <com.morphoss.xo_speak.views.eyeOutLayout
            android:id="@+id/eyeOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

        <com.morphoss.xo_speak.views.eyeInLayout
            android:id="@+id/eyeIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

        <com.morphoss.xo_speak.views.MouthLayout
            android:id="@+id/mouth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/textBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" >

        <AutoCompleteTextView
            android:id="@+id/autocompleteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:singleLine="true" />
    </FrameLayout>

</LinearLayout>